# ai-in-web-hw-project

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml
asr-init/: Dockerfile  entrypoint.sh
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/celery_worker/: celery_app.py  voice_task.py
backend/app/routers/: health.py  lists.py  tasks.py  users.py  ws.py
backend/app/services/: triton_client.py  vllm_client.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_config.py  test_lists.py  test_schemas.py  test_tasks.py  test_triton_client.py  test_users.py  test_vllm_client.py
common/: install-asr-deps.sh
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx  Login.jsx  MainScreen.jsx  api.js
monitoring/grafana/dashboards/: grocery-helper.json
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
triton/: Dockerfile
